2004-10-30  Kevin Kenny  <kennykb@acm.org>

	* generic/clock.c: Replaced WIN32 macro with __WIN32__.
	[Bug 1054357].  Thanks to David Gravereaux for the patch.
	* win/tclWinFile.c: Removed a long-standing bug that causes
	incorrect conversion between file time and UTC time if
	the file time is recorded in a different Daylight Saving Time
	status than the current one. [Bug 926106]
	
2004-10-29  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:	Correct reaction to errors in the
	obsolete processCmdLineArgsHook.	[Bug 1055673]
	* library/tcltest/pkgIndex.tcl:	Bump to tcltest 2.2.7
	* unix/Makefile.in:
	* tests/all.tcl:	Update to use [tcltest::configure].

2004-10-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tm.tcl (::tcl::tm::*): Use the core proc engine to
	generate the wrong-num-args error messages for the path ensemble.

	Ensembles can now (sometimes) rewrite the error messages of their
	subcommands so they appear more like the arguments that the user
	passed to the ensemble. Below is a description of changes involved
	in doing this.

	* tests/namespace.test (namespace-50.*): Tests of ensemble
	subcommand error message rewriting.
	* generic/tclProc.c (TclObjInterpProc): Make procedures implement
	their wrong-num-args message using Tcl_WrongNumArgs instead of
	something baked-at-home.
	* generic/tclNamesp.c (TclIsEnsemble, NsEnsembleImplementationCmd): 
	Added test of ensemble-hood (available to rest of core) and made
	ensembles set up the rewriting for Tcl_WrongNumArgs to take
	advantage of.
	* generic/tclInt.h (Interp.ensembleRewrite): Extra fields.
	* generic/tclIndexObj.c (Tcl_WrongNumArgs): Add knowledge of what
	is going on in ensembles' command rewriting so this command can
	generate the right error message itself.
	* generic/tclBasic.c (Tcl_CreateInterp, TclEvalObjvInternal):
	Added code to initialize (as empty) the rewriting fields and reset
	them when we leak outside an ensemble implementation.
